# local-payment-search-kit

./: .gitignore  AGENTS.md  AGENT_RUNBOOK.md  COMMERCIAL_USE.md  COPILOT_AGENT_TEST.md  LICENSE  QUICKSTART.md  README.md  START_LOCAL_KIT.bat  START_LOCAL_KIT.command  UAT_FINAL_NOTES.md  UAT_RESULTS.md  UAT_RESULTS_FOLLOW_UP.md  pyproject.toml
scripts/: local-kit-launcher.py  setup-local-kit.ps1  setup-local-kit.sh  start-dashboard.ps1  start-dashboard.sh
src/payment_evidence/: __init__.py  access.py  amounts.py  api_app.py  api_models.py  artifacts.py  audit.py  candidate_search.py  cli.py  cloudflare_access.py  config.py  dashboard.py  history.py  identity.py  local_state.py  packet.py  parser.py  query.py  redaction.py  secret_store.py  secrets.py  service_requests.py  tenant_registry.py  web_dashboard.py
src/payment_evidence/gateways/: base.py  nmi.py
tests/: test_dashboard_http.py  test_local_payment_search.py  test_payment_evidence.py  test_web_health.py
